<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="8dp"
    android:background="@drawable/shadow_bottom"
    android:layout_marginTop="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:src="@drawable/img_btn_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_medicine_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/paracetamol_500mg"
            android:fontFamily="@font/inter"
            android:textColor="@color/ccBlueText"
            android:textSize="16sp"
            android:textFontWeight="500"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:targetApi="p" />

        <TextView
            android:id="@+id/txt_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/quantity"
            android:fontFamily="@font/inter"
            android:textColor="@color/ccBlueText"
            android:textSize="14sp"
            android:textFontWeight="300"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txt_medicine_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txt_medicine_name"
            app:layout_constraintTop_toBottomOf="@+id/txt_medicine_name"
            app:layout_constraintVertical_bias="0.0"
            tools:targetApi="p" />

        <TextView
            android:id="@+id/txt_expiration_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:text="@string/expiration_date"
            android:fontFamily="@font/inter"
            android:textColor="@color/ccBlueText"
            android:textSize="14sp"
            android:textFontWeight="300"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txt_quantity"
            app:layout_constraintStart_toStartOf="@+id/txt_quantity"
            app:layout_constraintTop_toBottomOf="@+id/txt_quantity"
            app:layout_constraintVertical_bias="0.0"
            tools:targetApi="p" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>